cli: 显示容器持续运行时间
